--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 Click==7.0
 Flask==1.0.2
+Flask-SocketIO==3.3.2
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
+mysql-connector-python==8.0.15
 protobuf==3.7.1
 PyMySQL==0.9.3
+python-engineio==3.5.1
+python-socketio==3.1.2
 six==1.12.0
 Werkzeug==0.15.2
