--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bulma": "^0.7.4",
     "css-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^0.8.2",
+    "maildev": "^1.0.0",
     "manifest-revision-webpack-plugin": "0.0.5",
     "mini-css-extract-plugin": "^0.6.0",
     "node-sass": "^4.11.0",
